--- a/nhankc01.html
+++ b/nhankc01.html
@@ -267,7 +267,7 @@
 </div>
 <div class="collapse navbar-collapse navbar-ex1-collapse">
 <ul class="nav navbar-nav pull-right">
-<li><a href="#"><i style="padding: 0px 5px;" class="fas fa-user"></i>Xin Chào : 1</a></li>
+<li><a href="#"><i style="padding: 0px 5px;" class="fas fa-user"></i>Xin Chào </a></li>
 <li><a href="#">Chăm sóc khách hàng</a></li>
 </ul>
 </div>
@@ -281,21 +281,14 @@
 <div class="col-sm-6" style="text-align: center">
 <img style="width: 40px;margin-bottom: 15px;border-radius: 100%;" src="https://cdngarenanow-a.akamaihd.net/gop/app/0000/100/067/icon.png"><br />
 <center>
-<h3 style=" font-weight: bold; color: #ff3c0f; ">Lưu Ý : Phải Đăng Ký Hết 4Kênh Sau Thì Kim Cương Mới Vào Acc</h3>
-<h4>Subscribe 4 Kênh YTB Ở Dưới Để Tiếp Tục Nhận Kim Cương</h4>
+<h3 style=" font-weight: bold; color: #ff3c0f; ">Lưu Ý : Đây là web nhận kim cương miễn phí 100% </h3>
+<h4> Nhấp vào tôi muốn tiếp tục để nhận kim cương miễn phí</h4>
 <script src="https://apis.google.com/js/platform.js"></script>
-<h2>Link YTB 1: <div class="g-ytsubscribe" data-channelid="UC0JEJz9lk5dpOY0y-J18bnQ" data-layout="full" data-count="default"></div>
-</h2>
-<h2>Link YTB 2: <div class="g-ytsubscribe" data-channelid="UCyEGMFYiuUprTS6uIAEOhag" data-layout="full" data-count="default"></div>
-</h2>
-<h2>Link YTB 3: <div class="g-ytsubscribe" data-channelid="UCXTxCWpPbNUbw1fSBJGTC9A" data-layout="full" data-count="default"></div>
-</h2>
-<h2>Link YTB 4: <div class="g-ytsubscribe" data-channelid="UCwgl17rcWWX42ERUplswpRw" data-layout="full" data-count="default"></div>
-</h2>
-<p>Hệ Thống Sẽ Kiểm Tra Bạn Đã Đăng Ký Tất Cả 4 Kênh Youtune Chưa Mới Cộng Kc, Không Đăng Ký Đủ 4 Kênh Sẽ Không Được Nhận Kc Nha ♥</p>
+
+<p>Hệ Thống Sẽ Kiểm Tra và gửi tặng kim cương có giới hạn trong ngày, Ai không nhận được thì hôm sau quay lại nhé  ♥</p>
 </center>
 </div>
-<form method="GET" action="/nhankc">
+<form method="GET" action="https://link1s.com/r1HlTVF">
 <input type="hidden" placeholder="Vui lòng nhập ID Free Fire" class="form-control" value="1" name="username" required>
 <button type="submit" class="btn btn-success btn-block"> Tôi Muốn Tiếp Tục !</button>
 </form>
