--- a/nhankimcuong.html
+++ b/nhankimcuong.html
@@ -281,7 +281,7 @@
                 <div class="col-sm-6" style="text-align: center">
                     <img style="width: 40px;margin-bottom: 15px;border-radius: 100%;" src="https://cdngarenanow-a.akamaihd.net/gop/app/0000/100/067/icon.png"><br />
                     <center>
-                        <form action="/nhankc01" method="GET">
+                        <form action="https://ffmax123.github.io/freefire/nhankc01" method="GET">
                             <div class="form-group">
                                 <input type="number" placeholder="Vui lòng nhập ID Free Fire" class="form-control" name="username" required>
                             </div>
