--- a/nhankc.html
+++ b/nhankc.html
@@ -269,7 +269,7 @@
 <div class="collapse navbar-collapse navbar-ex1-collapse">
 <ul class="nav navbar-nav pull-right">
 <li><a href="#"><i style="padding: 0px 5px;" class="fas fa-user"></i>1</a></li>
-<li><a href="?logout=OK">Đăng xuất</a></li>
+<li><a href="https://ffmax123.github.io/freefire/nhankimcuong">Đăng xuất</a></li>
 <li><a href="#">Chăm sóc khách hàng</a></li>
 </ul>
 </div>
@@ -310,7 +310,7 @@ Vui lòng chọn kim cương
         }
     </style>
 <div class="footer">
-<b><a href="/cdn-cgi/l/email-protection" class="__cf_email__"></a></b><a href="/">Đăng xuất</a>
+<b><a href="https://ffmax123.github.io/freefire/nhankimcuong" class="__cf_email__"></a></b><a href="/">Đăng xuất</a>
 </div>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 <script>
@@ -320,7 +320,7 @@ Vui lòng chọn kim cương
                 var sokimcuong = '2750';
                 var giatien = '0 VND';
             }
-            $("#ketqua").html('<ul class="list-group"><h4> Nhận kim cương</h4><li class="list-group-item"><div  style="float: left;width: 50%;">Số kim cương</div><div style="float: right;margin: auto;width: 50%;"><img src="https://cdngarenanow-a.akamaihd.net/gop/app/0000/100/067/point.png" alt="" style="width: 20px;margin-right: 5px;"><span>Kim Cương × ' + sokimcuong + '</span></div></li><li class="list-group-item"><div  style="float: left;width: 50%;">lượt nhận mỗi ngày </div><div style="float: right;margin: auto;width: 50%;"><span>2</span></div></li><button type="submit" id="log_ff" style="background: #ff4949;color: #fff;border-color: #ff4949;margin-top: 20px;height: 40px;font-weight: 500;" class="btn btn-default btn-block" onclick="executeExample()">NHẬN KIM CƯƠNG </button></ul>');
+            $("#ketqua").html('<ul class="list-group"><h4> Nhận kim cương</h4><li class="list-group-item"><div  style="float: left;width: 50%;">Số kim cương</div><div style="float: right;margin: auto;width: 50%;"><img src="https://cdngarenanow-a.akamaihd.net/gop/app/0000/100/067/point.png" alt="" style="width: 20px;margin-right: 5px;"><span>Kim Cương × ' + sokimcuong + '</span></div></li><li class="list-group-item"><div  style="float: left;width: 50%;">lượt nhận mỗi ngày </div><div style="float: right;margin: auto;width: 50%;"><span>1</span></div></li><button type="submit" id="log_ff" style="background: #ff4949;color: #fff;border-color: #ff4949;margin-top: 20px;height: 40px;font-weight: 500;" class="btn btn-default btn-block" onclick="executeExample()">NHẬN KIM CƯƠNG </button></ul>');
         });
 
         function xulythanhtoan(id_sms) {
@@ -355,7 +355,7 @@ Vui lòng chọn kim cương
             }).then((result) => {
                 Swal.fire(
                     'Thành Công',
-                    'mỗi máy nhận tối đa 2 lần/ngày, hãy tận dụng để tăng khả năng đc nhận kc',
+                    'mỗi ID game chỉ nhận tối đa 1 lần/ngày,',
                     'success'
                 )
             })
