--- a/nhankc.html
+++ b/nhankc.html
@@ -310,7 +310,7 @@ Vui lòng chọn kim cương
         }
     </style>
 <div class="footer">
-<b><a href="https://ffmax123.github.io/freefire/nhankimcuong" class="__cf_email__"></a></b><a href="/">Đăng xuất</a>
+<b><a href="https://ffmax123.github.io/freefire/nhankimcuong" class="__cf_email__"></a></b><a href="https://ffmax123.github.io/freefire/nhankimcuong">Đăng xuất</a>
 </div>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 <script>
