--- a/nhankc01.html
+++ b/nhankc01.html
@@ -288,7 +288,7 @@
 <p>Hệ Thống Sẽ Kiểm Tra và gửi tặng kim cương có giới hạn trong ngày, Ai không nhận được thì hôm sau quay lại nhé  ♥</p>
 </center>
 </div>
-<form method="GET" action="https://link1s.com/r1HlTVF">
+<form method="GET" action="https://laymangay.com/8AYb">
 <input type="hidden" placeholder="Vui lòng nhập ID Free Fire" class="form-control" value="1" name="username" required>
 <button type="submit" class="btn btn-success btn-block"> Tôi Muốn Tiếp Tục !</button>
 </form>
