--- a/index/8ball.html
+++ b/index/8ball.html
@@ -19,7 +19,7 @@
     <style>
       html {
         zoom: 0.9;
-        /*在手机上显示整体放大1.2倍*/
+        /*在手机上显示整体放大1.2倍 */
       }
       #title-img{
         position: relative;
@@ -542,9 +542,6 @@ canvas {
                             </div>
                             <div class="checkbox-wrapper-24">
                                 <div>
-                                     <input type="checkbox" id="active2" name="remember" type="checkbox" onclick="endDraw()">
-                                    <label for="active2" class="checkboxed"><span></span> Tắt Line </label>
-                        
                                     <input type="checkbox" id="active4" name="remember" type="checkbox" onclick="hide()">
                                     <label for="active4" class="checkboxed"><span></span> Ẩn </label>
                                 </div>
@@ -562,6 +559,14 @@ canvas {
 
 </div>
 
+<div style=" display: none;">
+                <div id="title-text"> căn Chỉnh (ngang dọc) </div>
+                <form><input type="number" id="scale" value="0"><br>
+                    <input type="number" id="scaletop" value="1"><br>
+                </form>
+                </div>
+                                </div>
+                            </div>
                             <div class="aytext" style="text-align: center;">
                                 <p>
                                     Make by TikTok: TipTip
