--- a/index/8ball.html
+++ b/index/8ball.html
@@ -559,7 +559,7 @@ canvas {
 
 </div>
 
-<div style=" display: none;">
+<div>
                 <div id="title-text"> căn Chỉnh (ngang dọc) </div>
                 <form><input type="number" id="scale" value="0"><br>
                     <input type="number" id="scaletop" value="1"><br>
