--- a/index/8balltap.html
+++ b/index/8balltap.html
@@ -539,7 +539,7 @@
         <div :class="!ifshow?'onlyTitle ayimgui':'ayimgui'" ref="menuMain">
             <div class="aytitle" id="title-img">
               <center>
-                    <img style="width: 25px;height: 25px; border-radius: 50%;" src="https://tiptipios.github.io/ios/IMG_6318.png" width="30" height="40">
+                    <img style="width: 25px;height: 25px; border-radius: 50%;" src="https://tiptipios.github.io/ios/1I12VKBME_8H9K8G.JPG" width="30" height="40">
                            <span class="title-age" style="margin-left:20px; color:#f0f0f0;"> Menu 8 Ball By Tap Tap   <img src="https://github.com/WeansHHN/weanshhn.github.io/blob/main/img/gif/gifwaifu.gif?raw=true" alt="weanshhn" width="25" height="25" /> </span>
                     </center>
             </div>
@@ -584,7 +584,7 @@
             </div>
             <div class="aytext" style="text-align: center;">
                 <p>
-                   Make by TikTok: TipTip
+                   Make by TikTok: TapTap
                 </p>
                 </div>
     </div>
@@ -602,7 +602,7 @@
     <br>
     <div class="aytext" style="text-align: center;">
         <p>
-            Make by TikTok: TipTip
+            Make by TikTok: TapTap
         </p>
     </div>
 </div>
