--- a/index/spike.html
+++ b/index/spike.html
@@ -989,14 +989,14 @@
         }
         function ModmaurankA() {
             replaceValue = parseInt(document.getElementById("RankAInput").value);
-            modifyValue(rankA, newValue, "480");
+            modifyValue(rankA, replaceValue, "480");
             showNotification(" Đã Đổi Mảu");
 
         }
 
         function MauSiwoo() {
             replaceValue = parseInt(document.getElementById("MauSiwooInput").value);
-            modifyValue1(mausiwoo, newValue, "460", "E90", "7A8");
+            modifyValue1(mausiwoo, replaceValue, "460", "E90", "7A8");
             showNotification(" Đã Đổi Mảu");
 
         }
