--- a/index/8ball.html
+++ b/index/8ball.html
@@ -585,7 +585,7 @@
             <div class="aytitle" id="title-img">
               <center>
                     <img style="width: 25px;height: 25px; border-radius: 50%;" src="https://tiptipios.github.io/ios/IMG_6318.png" width="30" height="40">
-                    <img style="width: 130px;height:30px; border-radius: 50%;" src="https://tiptipios.github.io/ios/IMG9999.png" width="40" height="40">
+                    <img style="width: 130px;height:30px; border-radius: 50%;" src="https://tiptipios.github.io/ios/tiptip01.png" width="40" height="40">
                     <img src="https://github.com/WeansHHN/weanshhn.github.io/blob/main/img/gif/gifwaifu.gif?raw=true" alt="weanshhn" width="25" height="25" />
                     </center>
             </div>
