--- a/index/8ball.html
+++ b/index/8ball.html
@@ -530,7 +530,7 @@
 }
         canvas {
     border: 1.2px solid white; 
-    border-radius: 1px;
+    padding: 6.8px;
 }
 
 .overlay-text {
@@ -601,10 +601,10 @@
                     <div id="title-text" Class="aytext">
                     Chỉnh kích thước                            
                     </div>
-                                   <button class="onlyfan" id="decreaseButton">-</button>
-                                   <input type="number" id="size" min="0.01" max="10" value="1" step="0.01" readonly>
+                                   <button class="onlyfan" id="decreaseButton">-</button>                                   <span id="sizeValue" class="aytext">1</span>
+                                   <input style="display:none;" type="number" id="size" min="0.01" max="10" value="1" step="0.01" readonly>
                                    <button class="onlyfan" id="increaseButton">+</button>
-                                   <span id="sizeValue" class="aytext">1</span>
+
                            </center>
                     </div>
                     <div style=" display: none;">
@@ -733,8 +733,8 @@ alpha: false,
 desynchronized: false,
 });
 var tableOnScreen = {
-width: 1536 * 1.05625,
-height: 848 * 0.9575
+width: 1560 ,
+height: 836 
 };
 // canvas.style.position = 'absolute';
 // var scale = 127/53;
@@ -762,8 +762,8 @@ var startButton = document.getElementById('startButton');
 // Hàm để cập nhật kích thước canvas
 function updateCanvasSize(scaleFactor) {
 var tableOnScreen = {
-width: 1536 * 1.05625 * scaleFactor,
-height: 848 * 0.9575 * scaleFactor
+width: 1560 * 1.05625 * scaleFactor,
+height: 836 *  0.9575  * scaleFactor
 };
 
 canvas.width = tableOnScreen.width;
@@ -811,8 +811,8 @@ function startDraw() {
 
         var scaleFactor = parseFloat(sizeInput.value); // Sử dụng giá trị từ slider
         var tableOnScreen = {
-            width: 1536 * 1.05625 * scaleFactor * (1 + parseFloat(document.getElementById("scale").value) / 100),
-            height: 848 * 0.9575 * scaleFactor * (1 + parseFloat(document.getElementById("scale").value) / 100)
+            width: 1560 * 1.05625 * scaleFactor * (1 + parseFloat(document.getElementById("scale").value) / 100),
+            height: 836 * 0.9575 * scaleFactor * (1 + parseFloat(document.getElementById("scale").value) / 100) 
         };
 
         if (Math.abs(window.orientation) == 90) {
